center kitten immage and boxes
Co-authored-by: Brenna Lavin <lavinbrenna@gmail.com>
Co-Authored-by: Jessica Baker <jessb.epicodus@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Boxes</title>
   </head>
   <body>
+    <img class="centered-image" src="img/kitten.png" alt="Picture of kitten" />
     <div class="box1"><p>I'm box #1.</p></div>
     <div class="box2"><p>I'm box #2.</p></div>
     <div class="box3"><p>I'm box #3.</p></div>
